# name-name

./: .gitignore  .prettierignore  CLAUDE.md  DESIGN.md  README.md  compose.yaml  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: .dockerignore  .gitignore  ASSETS.md  BRANCHES.md  Dockerfile  README.md  convert_sample.py  pyproject.toml  requirements.txt  test_parser.py
backend/app/: git_service.py  main.py  markdown_parser.py  models.py
docs/: architecture.md  deployment.md
docs/adr/: 0001-hosting-architecture.md  0002-deterministic-state-and-debuggability.md
docs/guide/: controls.md  debugger.md  editor.md
docs/guidelines/: README.md
docs/roadmap/: README.md
docs/self-review/: 2026-06-01-baseline.md  README.md
docs/spec/: llll-ll-media-impl-gaps.md  markdown-v0.1.md
frontend/: .env.example  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: .gitignore  name_name_parser_bg.wasm
frontend/src/: App.tsx  (+4 more)
parser/: Cargo.toml
parser/pkg/: name_name_parser.d.ts  name_name_parser.js  name_name_parser_bg.js  name_name_parser_bg.wasm  name_name_parser_bg.wasm.d.ts  package.json
parser/src/: canonicalize.rs  emitter.rs  lib.rs  master.rs  models.rs  parser.rs
parser/tests/: friday1930_smoke_test.rs  integration_test.rs
parser/tests/fixtures/: friday1930-sample.md
reference/: README.md
src/: App.tsx  index.css  types.ts
worker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
(+239 files in other folders)
